examples/errors/parsing/sum_types.cn
type Option(a) = { Some : a | None : () }

fun toInt : Option(Int) -> Int [pure] = {
    Some n -> n
  | None u -> 0
}

main : () [impure] =
  let a = toInt (Some 42 : Option(Int));
  let b = toInt (None () : Option(Int));
  ()
